--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,25 @@ p {
     background-position: center;
 }
 
+/* Condensed classes to reduce duplicate elements */
+.details {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.details img {
+    max-height: 200px;
+}
+
+.details h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
 .float-left {
     float: left;
     margin-right: 25px;
@@ -85,7 +104,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/* Condensed classes to reduce duplicate elements */
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
@@ -100,24 +119,6 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
-
-.details {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.details img {
-    max-height: 200px;
-}
-
-.details h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
 }
 
 .footer {
