Added additional comments and improved some selector/element names for better clarity

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* Elements have been rearranged to follow semantic structure more closely */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -6,6 +7,15 @@
 
 body {
     background-color: #d9dcd6;
+}
+/* Brought selectors a and p up further to reflect their importance to the page */
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
 }
 
 .header {
@@ -40,16 +50,7 @@ body {
     display: inline-block;
     margin-left: 25px;
 }
-
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
-}
-
+/* renamed selector and affiliated class name for more clarity */
 .herobanner {
     height: 800px;
     width: 100%;
@@ -59,8 +60,8 @@ p {
     background-position: center;
 }
 
-/* Condensed classes to reduce duplicate elements */
-.details {
+/* Condensed respective selectors/classes in CSS/HTML to 'service-details' to reduce clutter */
+.service-details {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -69,11 +70,11 @@ p {
     color: #ffffff;
 }
 
-.details img {
+.service-details img {
     max-height: 200px;
 }
 
-.details h2 {
+.service-details h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -104,18 +105,18 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-/* Condensed classes to reduce duplicate elements */
-.breakdown {
+/* Condensed respective classes in HTML and selectors in CSS to reduce excess elements */
+.service-breakdown {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.breakdown h3 {
+.service-breakdown h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.breakdown img {
+.service-breakdown img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
