added header element, adjusted CSS to affect element rather than header class type

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,23 +18,23 @@ p {
     font-size: 16px;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header article {
+header article {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -46,7 +46,7 @@ p {
     list-style-type: none;
 }
 
-.header article ul li {
+header article ul li {
     display: inline-block;
     margin-left: 25px;
 }
